<?xml version="1.0" encoding="utf-8"?>
<resources>
    <array name="cafe_array">
        <item>Armgartstraße</item>
        <item>Bergedorf</item>
        <item>Botanischer-Garten</item>
        <item>Bucerius-Law-School</item>
        <item>Cafe Alexanderstraße</item>
        <item>Café (am Mittelweg)</item>
        <item>Café CFEL</item>
        <item>Cafe Jungiusstraße</item>
        <item>Campus</item>
        <item>Finkenau</item>
        <item>Geomatikum</item>
        <item>HCU</item>
        <item>Harburg</item>
        <item>Stellingen </item>
        <item>Studierendenhaus</item>
        <item>Überseering</item>
    </array>

</resources>